Some fixes & improvements: - we can now close modals with the escape key - fixed an appearance glitch when a modal bigger than the window height was displaying a second time - text-align:center on .badge - display:inline-block on .top-bar .logo - improved hints displaying

--- a/css/ministrap.less
+++ b/css/ministrap.less
@@ -179,7 +179,7 @@ h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child,h6:fi
 .container-full-width{display:block;width:100%;}
 .row{margin:0;width:100%;}
 .row:after{clear:both;content:'';display:table;}
-.top-bar .logo{font-size:25px;padding:2px 0;display:block;}
+.top-bar .logo{font-size:25px;padding:2px 0;display:inline-block;}
 .top-bar,.bottom-bar,.modal-title{display:block;color:@top-bar-color;background-color:@top-bar-bg-color;}
 .top-bar{width:100%;position:fixed;top:0;z-index:9999999;height:47px;}
 .bottom-bar{width:100%;font-size:11px;padding:5px 0;text-align:center;}
@@ -238,7 +238,7 @@ h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child,h6:fi
 .span12{width:940px;}
 .label,.badge{display:inline-block;color:@label-color;font-size:12px;font-weight:bold;padding:0 3px;background:@label-bg-color;text-shadow:0 -1px 1px rgba(0,0,0,0.5);box-shadow:0 0 0 1px rgba(0,0,0,0.3);}
 .label{border-radius:3px;}
-.badge{border-radius:20px;min-width:13px;line-height:1;padding:4px;}
+.badge{border-radius:20px;min-width:13px;line-height:1;padding:4px;text-align:center;}
 .btn{border:none;display:inline-block;padding:4px 12px;border-radius:@elements-border-radius;background:@btn-bg-color;color:@btn-color;text-shadow:0 -1px 1px rgba(0,0,0,0.5);cursor:pointer;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select: none;-ms-user-select:none;user-select:none;box-shadow:inset 0 1px 1px rgba(255,255,255,0.7),1px 1px 1px rgba(0,0,0,0.2),inset 0 -2px 1px rgba(0,0,0,0.4);}
 .btn:hover{box-shadow:inset 0 1px 1px rgba(255,255,255,0.7),1px 1px 1px rgba(0,0,0,0.2),inset 0 -2px 1px rgba(0,0,0,0.4),inset 0 0 10000px rgba(255,255,255,0.2);}
 .btn:focus,.btn:active{box-shadow:inset 0 0 10000px rgba(0,0,0,0.2);text-shadow:0 1px 1px rgba(0,0,0,0.5);text-decoration:none;}
